<resources>
    <string name="app_name">ClickMechanic</string>
    <string name="search">Explore</string>
    <string name="list">List</string>
    <string name="about">About ClickMechanic</string>
    <string name="mentor">Meet the Mentor</string>
    <string name="developer">Meet the Developer</string>
    <string name="repair">Vehicle Repair Shops</string>
    <string name="medicines">Medical Stores</string>
    <string name="grocery">Grocery Store</string>
    <string name="title_activity_to_do_list">ToDoList</string>
    <string name="app_info">ClickMechanic was originally developed to help travellers locate places like Local Vehicle Repair Shops, Grocery Stores, Medical Stores, keeping in mind that such places aren’t available on Google Maps also sometimes, especially where remote areas are concerned.  Just create an account, click a button, and get the location of some of the most important stores. ClickMechanic ensures you always have a local guide in your pocket.</string>
    <string name="mentor_name">Ms Tripti Misra</string>
    <string name="mentor_des">Assistant Professor (Department of Cyber Platform)</string>
    <string name="developer_name">Aayush Shrivastava </string>
    <string name="developer_des">B.Tech CSE in Cyber Security and Forensics (2015-19) </string>
    <string name="title_activity_repair_shops">Map</string>
    <string name="title_activity_medicine_shop">Map</string>
    <string name="title_activity_grocery_shop">Map</string>
</resources>
